--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sentuuuuu wanna go on a date with meee?</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=stylesheet">
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
     <div id="container">
         <div id="image-container"></div> <!-- Container for displaying images -->
         <div id="text-container">
-            <div id="question">Will you be my valentine?</div> <!-- Question -->
+            <div id="question">sentuuuuu wanna go on a date with meee?</div> <!-- Question -->
             <div id="options">
                 <button id="yes-button" onclick="selectOption('yes')">Yes</button> <!-- Yes button -->
                 <button id="no-button" onclick="selectOption('no')">No</button> <!-- No button -->
