--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sentuuuuu wanna go on a date with meee?</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
